test/parse-checks/func-at-filescope-3.good
func-at-filescope-3.pebl:3: error: function 'bar' can only be declared at file scope
