test/parse-checks/func-at-filescope-3.pebl
func foo(): void {
  if 1 {
    func bar(): void {}
  }
}
